# Coral_de_LLM_recipes

./: .gitignore  DDP_Accelerator  Day 1 - Prompting.ipynb  Day 2 - Classifying embeddings with Keras.ipynb  Day 2 - Embeddings and similarity scores.ipynb  Day 3 - Building an agent with LangGraph.ipynb  Day 3 - Function calling with the Gemini API.ipynb  Day 4 - Fine tuning a custom model  Day 4 - Google Search grounding  Foundational Large Language Models & Text Generation.ipynb  README.md  flash_attention_2  flash_attention_2.ipynb  modelparallelism  num_beam increase ram costs  pyproject.toml  requirements.txt
Hugging_Face_Agents_Course/unit1/: Fine-Tuning a Model for Function-Calling.ipynb  Testing_Fine-Tuned_model_from_hub.ipynb  dummy_agent_library.ipynb  messages-and-special-tokens.ipynb  what_are_tools.ipynb
Hugging_Face_Agents_Course/unit2/: Building Agents That Use Code.ipynb
Hugging_Face_Agents_Course/unit2/ smolagents/: code_agents.ipynb  example.env  retrieval_agents.ipynb  tool_calling_agents.ipynb  tools.ipynb  utils.py
Hugging_Face_Agents_Course/unit2/langgraph/: agent.ipynb  building_blocks.ipynb  mail_sorting.ipynb
Hugging_Face_Agents_Course/unit2/llama-index/: agents.ipynb  components.ipynb  llama-hub.ipynb  tools.ipynb  workflows.ipynb
Hugging_Face_Agents_Course/unit2/smolagents/: code_agents.ipynb  multiagent_notebook.ipynb  retrieval_agents.ipynb  tool_calling_agents.ipynb  tools.ipynb  vision_agents.ipynb  vision_web_browser.py
Hugging_Face_Agents_Course/unit2/smolagents/Final Quiz/: answer.ipynb
Hugging_Face_Agents_Course/unit3/: app.py  app_memory.py  building-and-integrating-tools-for-your-agent.ipynb  retriever.py  tools.py
Hugging_Face_Agents_Course/unit4/: README.md
benchmark/: benchmark.py  tflops.ipynb
langgraph/: agent_tool_create_react_agent.ipynb
