[project]
name = "coral-de-llm-recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "bitsandbytes>=0.45.3",
 "datasets>=3.3.2",
 "ipywidgets>=8.1.5",
 "jupyter>=1.1.1",
 "langchain-core>=0.3.36",
 "langchain-google-genai>=2.0.9",
 "langgraph>=0.2.73",
 "peft>=0.14.0",
 "tensorboardx>=2.6.2.2",
 "smolagents>=1.9.2",
 "torch",
 "torchvision",
 "transformers>=4.48.3",
 "trl>=0.15.1",
 "opentelemetry-sdk>=1.30.0",
 "opentelemetry-exporter-otlp>=1.30.0",
 "openinference-instrumentation-smolagents>=0.1.6",
 "google-genai>=1.5.0",
 "litellm>=1.63.3",
]


[dependency-groups]
dev = ["ipykernel>=6.29.5"]


#https://pytorch.org/get-started/locally/
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Windows'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Windows'" },
]
